GPU subdivision with textures corrupt display after undo #105455

Closed
opened 2023-03-05 11:37:00 +01:00 by sanek122005 · 4 comments

System Information
Operating system: ubuntu 20.04
Graphics card: Geforce MX 230

Blender Version
Broken: 3.6 beta

Short description of error
When performing an undo in the shading workspace and switching to the layout workspace, a hard anarchy appears on the screen. Reproduced in one of my working files. It is very difficult to catch him, and it seems only with the Subdivision GPU turned on
Bug

Exact steps for others to reproduce the error

  1. Open my file. Make sure GPU Subdivision is enabled
  2. Go to Shading workspace
  3. Do something (for example, as in my video, rotate the value in the Scale node), then undo. A sure sign that everything is done correctly - the model will roll back to the Low Poly state
  4. Go to the Layout workspace and see the cacophony of lines :)
**System Information** Operating system: ubuntu 20.04 Graphics card: Geforce MX 230 **Blender Version** Broken: 3.6 beta **Short description of error** When performing an undo in the shading workspace and switching to the layout workspace, a hard anarchy appears on the screen. Reproduced in one of my working files. It is very difficult to catch him, and it seems only with the Subdivision GPU turned on [Bug](https://youtu.be/nR1lN3esUIw) **Exact steps for others to reproduce the error** 1. Open my file. Make sure GPU Subdivision is enabled 2. Go to Shading workspace 3. Do something (for example, as in my video, rotate the value in the Scale node), then undo. A sure sign that everything is done correctly - the model will roll back to the Low Poly state 4. Go to the Layout workspace and see the cacophony of lines :)
sanek122005 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-05 11:37:01 +01:00
Member

Hi, Thanks for the report. I can confirm.
Will find the commit which has affected this.

Hi, Thanks for the report. I can confirm. Will find the commit which has affected this.
Pratik Borhade added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-06 03:46:20 +01:00
Member

Caused by 4d3bfb3f41
cc @angavrilov

Caused by 4d3bfb3f4195ac879b7330e981829122b2633e93 cc @angavrilov
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-03-06 04:54:04 +01:00

Well, I doubt this is "caused" by that. What is more likely is that the cache isn't invalidated properly, but the bug that commit fixed was masking the problem. After all, the essense of that bug basically was spurious cache invalidation.

cc @kevindietrich

Well, I doubt this is "caused" by that. What is more likely is that the cache isn't invalidated properly, but the bug that commit fixed was masking the problem. After all, the essense of that bug basically was spurious cache invalidation. cc @kevindietrich

Basically, I'll try to look at that, but maybe @kevindietrich would immediately have an idea what's going on and how to fix it.

Basically, I'll try to look at that, but maybe @kevindietrich would immediately have an idea what's going on and how to fix it.
Brecht Van Lommel added this to the 3.5 milestone 2023-03-14 16:42:58 +01:00
Brecht Van Lommel changed title from Hellish anarchy on the screen when undo in nearby workspace to GPU subdivision with textures corrupt display after undo 2023-03-16 20:53:52 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-16 23:19:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105455
No description provided.